--- a/css/style.css
+++ b/css/style.css
@@ -416,16 +416,27 @@ nav ul li .filter .content ul {
 /* line 224, ../scss/style.scss */
 nav ul li .filter .content ul li {
   margin: 0 0 14px 0;
+  padding-left: 20px;
+  background: url(../img/icons/icons.png) no-repeat left -66px;
+  cursor: pointer;
 }
-/* line 226, ../scss/style.scss */
+/* line 230, ../scss/style.scss */
+nav ul li .filter .content ul li.selected {
+  background: url(../img/icons/icons.png) no-repeat left -44px;
+}
+/* line 232, ../scss/style.scss */
+nav ul li .filter .content ul li.selected a {
+  color: #666666;
+}
+/* line 235, ../scss/style.scss */
 nav ul li .filter .content ul li a {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 11px;
-  color: #666666;
+  color: #bbbbbb;
   text-transform: uppercase;
   line-height: 14px;
 }
-/* line 236, ../scss/style.scss */
+/* line 245, ../scss/style.scss */
 nav ul li .filter .content hr {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
