--- a/scss/style.scss
+++ b/scss/style.scss
@@ -223,13 +223,22 @@ nav ul li .filter {
 
         li {
             margin: 0 0 14px 0;
+            padding-left: 20px;
+            background:url(../img/icons/icons.png) no-repeat left -66px; 
+            cursor:pointer;
+
+            &.selected {
+                background:url(../img/icons/icons.png) no-repeat left -44px; 
+                a { color: $standard_gray; }
+            }
+
             a {
-            font-family: "Helvetica Neue", sans-serif;
-            font-size:11px;
-            color: $standard_gray;
-            text-transform: uppercase;
-            line-height:14px;
-        }
+                font-family: "Helvetica Neue", sans-serif;
+                font-size:11px;
+                color: $light_gray;
+                text-transform: uppercase;
+                line-height:14px;
+            }
         }
     }
 
@@ -240,7 +249,7 @@ nav ul li .filter {
         left: -21px;
         position: relative;
         margin-bottom:20px;
-    
+
     }
 
 } // content
