The filter closes when the user clicks outside it

--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,7 @@ nav ul li a {
 
 /* line 191, ../scss/style.scss */
 nav ul li .filter {
+  display: none;
   position: absolute;
   width: 236px;
   top: 35px;
