--- a/scss/style.scss
+++ b/scss/style.scss
@@ -189,7 +189,7 @@ nav {
 .box.blue { position:absolute;   top: 300px; left: 900px; }
 
 nav ul li .filter {
-//    display:none;
+    display:none;
 
     position:absolute;
     width:236px;
