Adds sprite files

--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,35 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
+/*** SPRITES ***/
+/* icons */
+/* line 39, icons */
+.icons-sprite, .icons-arrows, .icons-icons, .icons-symbols {
+  background: url('/img/icons-se04627a781.png') no-repeat;
+}
+
+/* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.icons-arrows {
+  background-position: 0 0;
+}
+
+/* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.icons-icons {
+  background-position: 0 -4px;
+}
+
+/* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+.icons-symbols {
+  background-position: 0 -83px;
+}
+
 @import url(http://fonts.googleapis.com/css?family=News+Cycle);
-/* line 31, ../scss/style.scss */
+/* line 32, ../scss/style.scss */
 html {
   height: 100%;
 }
 
-/* line 32, ../scss/style.scss */
+/* line 33, ../scss/style.scss */
 body {
   height: 100%;
   margin: 0;
@@ -81,20 +103,20 @@ body {
   overflow: hidden;
 }
 
-/* line 34, ../scss/style.scss */
+/* line 35, ../scss/style.scss */
 body {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 15px;
   color: #333333;
 }
 
-/* line 40, ../scss/style.scss */
+/* line 41, ../scss/style.scss */
 a {
   color: #000;
   text-decoration: none;
 }
 
-/* line 42, ../scss/style.scss */
+/* line 43, ../scss/style.scss */
 h1 {
   font-family: 'News Cycle', sans-serif;
   color: #0c5fb2;
@@ -103,59 +125,59 @@ h1 {
   text-transform: lowercase;
 }
 
-/* line 50, ../scss/style.scss */
+/* line 51, ../scss/style.scss */
 h2, h3, h4, h5 {
   font-family: "Helvetica Neue", sans-serif;
 }
 
-/* line 52, ../scss/style.scss */
+/* line 53, ../scss/style.scss */
 h2 {
   font-size: 18px;
   font-weight: bold;
 }
 
-/* line 53, ../scss/style.scss */
+/* line 54, ../scss/style.scss */
 h3 {
   font-size: 14px;
   font-weight: bold;
 }
 
-/* line 54, ../scss/style.scss */
+/* line 55, ../scss/style.scss */
 h4 {
   font-size: 11px;
   font-weight: bold;
 }
 
-/* line 56, ../scss/style.scss */
+/* line 57, ../scss/style.scss */
 .content {
   width: 980px;
   margin: auto;
 }
 
 /* Navigation */
-/* line 59, ../scss/style.scss */
+/* line 60, ../scss/style.scss */
 nav {
   height: 80px;
   background: url(../img/backgrounds/bkg_navigation.png) repeat-x;
 }
-/* line 63, ../scss/style.scss */
+/* line 64, ../scss/style.scss */
 nav h1 {
   position: relative;
   top: 10px;
   float: left;
 }
-/* line 65, ../scss/style.scss */
+/* line 66, ../scss/style.scss */
 nav ul {
   position: relative;
   top: 30px;
   float: right;
 }
-/* line 70, ../scss/style.scss */
+/* line 71, ../scss/style.scss */
 nav ul li {
   display: inline;
   margin-left: 26px;
 }
-/* line 74, ../scss/style.scss */
+/* line 75, ../scss/style.scss */
 nav ul li a {
   position: relative;
   font-size: 19px;
@@ -165,18 +187,18 @@ nav ul li a {
   z-index: 150;
 }
 
-/* line 79, ../scss/style.scss */
+/* line 80, ../scss/style.scss */
 #map {
   height: 100%;
 }
 
 /* Basic infobox */
-/* line 83, ../scss/style.scss */
+/* line 84, ../scss/style.scss */
 .box {
   position: relative;
   width: 304px;
 }
-/* line 89, ../scss/style.scss */
+/* line 90, ../scss/style.scss */
 .box .header {
   background: url(../img/backgrounds/bkg_box_top_gold.png) repeat-y;
   position: absolute;
@@ -185,17 +207,17 @@ nav ul li a {
   top: -119px;
   padding: 35px;
 }
-/* line 97, ../scss/style.scss */
+/* line 98, ../scss/style.scss */
 .box .header hgroup {
   width: 220px;
 }
-/* line 100, ../scss/style.scss */
+/* line 101, ../scss/style.scss */
 .box .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #845412;
   line-height: 22px;
 }
-/* line 101, ../scss/style.scss */
+/* line 102, ../scss/style.scss */
 .box .header hgroup h4 {
   text-shadow: 1px 1px 1px #ffcc00;
   margin: 0 0 6px 0;
@@ -203,13 +225,13 @@ nav ul li a {
   opacity: .6;
   text-transform: uppercase;
 }
-/* line 105, ../scss/style.scss */
+/* line 106, ../scss/style.scss */
 .box .content {
   width: 218px;
   padding: 29px 43px 24px 43px;
   background: url(../img/backgrounds/bkg_boxes.png) repeat-y -944px top;
 }
-/* line 112, ../scss/style.scss */
+/* line 113, ../scss/style.scss */
 .box .footer {
   width: 100%;
   background: url(../img/backgrounds/bkg_boxes.png) no-repeat -631px bottom;
@@ -219,35 +241,35 @@ nav ul li a {
   bottom: -13px;
 }
 
-/* line 118, ../scss/style.scss */
+/* line 119, ../scss/style.scss */
 .box .content a {
   font-size: 11px;
   font-weight: bold;
   text-transform: uppercase;
 }
-/* line 120, ../scss/style.scss */
+/* line 121, ../scss/style.scss */
 .box .content h4 {
   margin: 0 0 5px 0;
   text-transform: uppercase;
   color: #bbbbbb;
 }
-/* line 122, ../scss/style.scss */
+/* line 123, ../scss/style.scss */
 .box .content ul {
   list-style: square;
   margin: 0 0 29px 0;
 }
-/* line 126, ../scss/style.scss */
+/* line 127, ../scss/style.scss */
 .box .content ul:last-child {
   margin: 0;
 }
-/* line 128, ../scss/style.scss */
+/* line 129, ../scss/style.scss */
 .box .content ul li {
   margin: 0 0 7px 0;
   color: #333333;
   font-size: 15px;
   line-height: 22px;
 }
-/* line 134, ../scss/style.scss */
+/* line 135, ../scss/style.scss */
 .box .content ul li a {
   font-size: 15px;
   color: #333333;
@@ -255,108 +277,108 @@ nav ul li a {
   font-weight: normal;
   border-bottom: 1px dotted #4C4C4C;
 }
-/* line 140, ../scss/style.scss */
+/* line 141, ../scss/style.scss */
 .box.blue .content a {
   color: #1872a0;
 }
 
 /* Golden box */
-/* line 145, ../scss/style.scss */
+/* line 146, ../scss/style.scss */
 .box.golden .header {
   background: url(../img/backgrounds/bkg_box_top_gold.png) repeat-y;
 }
-/* line 147, ../scss/style.scss */
+/* line 148, ../scss/style.scss */
 .box.golden .header hgroup {
   text-shadow: 1px 1px 1px #ffcc00;
 }
-/* line 149, ../scss/style.scss */
+/* line 150, ../scss/style.scss */
 .box.golden .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #845412;
 }
-/* line 150, ../scss/style.scss */
+/* line 151, ../scss/style.scss */
 .box.golden .header hgroup h4 {
   color: #9a6100;
 }
-/* line 153, ../scss/style.scss */
+/* line 154, ../scss/style.scss */
 .box.golden .content {
   background-position: -944px top;
 }
-/* line 154, ../scss/style.scss */
+/* line 155, ../scss/style.scss */
 .box.golden .footer {
   background-position: -631px bottom;
 }
 
 /* Green box */
-/* line 159, ../scss/style.scss */
+/* line 160, ../scss/style.scss */
 .box.green .header {
   background: url(../img/backgrounds/bkg_box_top_green.png) repeat-y;
 }
-/* line 163, ../scss/style.scss */
+/* line 164, ../scss/style.scss */
 .box.green .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #52642a;
 }
-/* line 164, ../scss/style.scss */
+/* line 165, ../scss/style.scss */
 .box.green .header hgroup h4 {
   text-shadow: 1px 1px 1px #b2e053;
   color: #5f7232;
 }
-/* line 167, ../scss/style.scss */
+/* line 168, ../scss/style.scss */
 .box.green .content {
   background-position: -308px top;
 }
-/* line 168, ../scss/style.scss */
+/* line 169, ../scss/style.scss */
 .box.green .footer {
   background-position: left bottom;
 }
 
 /* Blue box */
-/* line 174, ../scss/style.scss */
+/* line 175, ../scss/style.scss */
 .box.blue .header {
   background: url(../img/backgrounds/bkg_box_top_blue.png) repeat-y;
 }
-/* line 178, ../scss/style.scss */
+/* line 179, ../scss/style.scss */
 .box.blue .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #0f445e;
 }
-/* line 179, ../scss/style.scss */
+/* line 180, ../scss/style.scss */
 .box.blue .header hgroup h4 {
   text-shadow: 1px 1px 1px #1b93cf;
   color: #104c6b;
 }
-/* line 182, ../scss/style.scss */
+/* line 183, ../scss/style.scss */
 .box.blue .content {
   background-position: -1566px top;
 }
-/* line 183, ../scss/style.scss */
+/* line 184, ../scss/style.scss */
 .box.blue .footer {
   background-position: -1259px bottom;
 }
 
-/* line 187, ../scss/style.scss */
+/* line 188, ../scss/style.scss */
 .box.golden {
   position: absolute;
   top: 300px;
   left: 100px;
 }
 
-/* line 188, ../scss/style.scss */
+/* line 189, ../scss/style.scss */
 .box.green {
   position: absolute;
   top: 300px;
   left: 500px;
 }
 
-/* line 189, ../scss/style.scss */
+/* line 190, ../scss/style.scss */
 .box.blue {
   position: absolute;
   top: 300px;
   left: 900px;
 }
 
-/* line 191, ../scss/style.scss */
+/* line 192, ../scss/style.scss */
 nav ul li .filter {
   display: none;
   position: absolute;
@@ -365,14 +387,14 @@ nav ul li .filter {
   left: -65px;
   z-index: 100;
 }
-/* line 199, ../scss/style.scss */
+/* line 200, ../scss/style.scss */
 nav ul li .filter div.content {
   width: 186px;
   height: 294px;
   background: url(../img/backgrounds/bkg_filter.png) repeat-y -242px bottom;
   padding: 13px 25px 7px 25px;
 }
-/* line 206, ../scss/style.scss */
+/* line 207, ../scss/style.scss */
 nav ul li .filter div.t {
   position: absolute;
   top: -55px;
@@ -381,7 +403,7 @@ nav ul li .filter div.t {
   height: 55px;
   background: url(../img/backgrounds/bkg_filter.png) no-repeat left top;
 }
-/* line 207, ../scss/style.scss */
+/* line 208, ../scss/style.scss */
 nav ul li .filter div.b {
   position: absolute;
   bottom: -13px;
@@ -391,7 +413,7 @@ nav ul li .filter div.b {
   background: url(../img/backgrounds/bkg_filter.png) no-repeat -492px top;
 }
 
-/* line 215, ../scss/style.scss */
+/* line 216, ../scss/style.scss */
 nav ul li .filter .content h3 {
   margin: 0 0 19px 0;
   font-family: 'News Cycle', sans-serif;
@@ -399,54 +421,54 @@ nav ul li .filter .content h3 {
   color: #999999;
   text-transform: uppercase;
 }
-/* line 218, ../scss/style.scss */
+/* line 219, ../scss/style.scss */
 nav ul li .filter .content ul {
   position: none;
   top: 0;
   float: none;
 }
-/* line 219, ../scss/style.scss */
+/* line 220, ../scss/style.scss */
 nav ul li .filter .content ul li {
   display: block;
   margin: 0;
 }
-/* line 222, ../scss/style.scss */
+/* line 223, ../scss/style.scss */
 nav ul li .filter .content ul.ticks li {
   background: url(../img/icons/icons.png) no-repeat left -66px;
 }
-/* line 224, ../scss/style.scss */
+/* line 225, ../scss/style.scss */
 nav ul li .filter .content ul.ticks li.selected {
   background: url(../img/icons/icons.png) no-repeat left -44px;
 }
-/* line 231, ../scss/style.scss */
+/* line 232, ../scss/style.scss */
 nav ul li .filter .content ul.radio li {
   margin: 0 0 5px 0;
   background: url(../img/icons/icons.png) no-repeat left -21px;
 }
-/* line 234, ../scss/style.scss */
+/* line 235, ../scss/style.scss */
 nav ul li .filter .content ul.radio li.selected {
   background: url(../img/icons/icons.png) no-repeat left 3px;
 }
-/* line 240, ../scss/style.scss */
+/* line 241, ../scss/style.scss */
 nav ul li .filter .content ul {
   margin: 0 0 20px 0;
 }
-/* line 243, ../scss/style.scss */
+/* line 244, ../scss/style.scss */
 nav ul li .filter .content ul li {
   margin: 0 0 14px 0;
   padding-left: 20px;
   background: url(../img/icons/icons.png) no-repeat left -66px;
   cursor: pointer;
 }
-/* line 249, ../scss/style.scss */
+/* line 250, ../scss/style.scss */
 nav ul li .filter .content ul li.selected {
   background: url(../img/icons/icons.png) no-repeat left -44px;
 }
-/* line 251, ../scss/style.scss */
+/* line 252, ../scss/style.scss */
 nav ul li .filter .content ul li.selected a {
   color: #666666;
 }
-/* line 254, ../scss/style.scss */
+/* line 255, ../scss/style.scss */
 nav ul li .filter .content ul li a {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 11px;
@@ -454,7 +476,7 @@ nav ul li .filter .content ul li a {
   text-transform: uppercase;
   line-height: 14px;
 }
-/* line 264, ../scss/style.scss */
+/* line 265, ../scss/style.scss */
 nav ul li .filter .content hr {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
