--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 
 @import "compass/reset";
 @import "compass/css3";
+@import "sprites.scss";
 @import url(http://fonts.googleapis.com/css?family=News+Cycle);
 
 $title_blue:    #0C5FB2;
