Adds arrow icons to the filter menu

--- a/css/sprites.css
+++ b/css/sprites.css
@@ -2,7 +2,7 @@
 /* icons */
 /* line 39, icons */
 .icons-sprite, .icons-arrows, .icons-icons, .icons-symbols {
-  background: url('/img/icons-se04627a781.png') no-repeat;
+  background: url('/img/icons-sd293da2e72.png') no-repeat;
 }
 
 /* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
@@ -12,12 +12,12 @@
 
 /* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .icons-icons {
-  background-position: 0 -4px;
+  background-position: 0 -90px;
 }
 
 /* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .icons-symbols {
-  background-position: 0 -83px;
+  background-position: 0 -169px;
 }
 
 /* backgrounds */
