--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /*** SPRITES ***/
 /* icons */
 /* line 39, icons */
-.icons-sprite, .icons-arrows, .icons-icons, .icons-symbols {
-  background: url('/img/icons-se04627a781.png') no-repeat;
+.icons-sprite, .icons-arrows, .icons-icons, .icons-symbols, nav ul li a.selected, nav ul li a {
+  background: url('/img/icons-sd293da2e72.png') no-repeat;
 }
 
 /* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
@@ -81,12 +81,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .icons-icons {
-  background-position: 0 -4px;
+  background-position: 0 -90px;
 }
 
 /* line 60, ../../../.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .icons-symbols {
-  background-position: 0 -83px;
+  background-position: 0 -169px;
 }
 
 /* backgrounds */
@@ -213,28 +213,34 @@ nav ul li {
   display: inline;
   margin-left: 26px;
 }
-/* line 75, ../scss/style.scss */
+/* line 76, ../scss/style.scss */
 nav ul li a {
   position: relative;
+  padding-right: 25px;
   font-size: 19px;
   color: #000000;
   text-transform: uppercase;
   font-family: 'News Cycle', sans-serif;
   z-index: 150;
+  background-position: 100% 15px;
+}
+/* line 77, ../scss/style.scss */
+nav ul li a.selected {
+  background-position: 100% -45px;
 }
 
-/* line 80, ../scss/style.scss */
+/* line 93, ../scss/style.scss */
 #map {
   height: 100%;
 }
 
 /* Basic infobox */
-/* line 84, ../scss/style.scss */
+/* line 97, ../scss/style.scss */
 .box {
   position: relative;
   width: 304px;
 }
-/* line 90, ../scss/style.scss */
+/* line 103, ../scss/style.scss */
 .box .header {
   background: url(../img/backgrounds/bkg_box_top_gold.png) repeat-y;
   position: absolute;
@@ -243,17 +249,17 @@ nav ul li a {
   top: -119px;
   padding: 35px;
 }
-/* line 98, ../scss/style.scss */
+/* line 111, ../scss/style.scss */
 .box .header hgroup {
   width: 220px;
 }
-/* line 101, ../scss/style.scss */
+/* line 114, ../scss/style.scss */
 .box .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #845412;
   line-height: 22px;
 }
-/* line 102, ../scss/style.scss */
+/* line 115, ../scss/style.scss */
 .box .header hgroup h4 {
   text-shadow: 1px 1px 1px #ffcc00;
   margin: 0 0 6px 0;
@@ -261,13 +267,13 @@ nav ul li a {
   opacity: .6;
   text-transform: uppercase;
 }
-/* line 106, ../scss/style.scss */
+/* line 119, ../scss/style.scss */
 .box .content {
   width: 218px;
   padding: 29px 43px 24px 43px;
   background: url(../img/backgrounds/bkg_boxes.png) repeat-y -944px top;
 }
-/* line 113, ../scss/style.scss */
+/* line 126, ../scss/style.scss */
 .box .footer {
   width: 100%;
   background: url(../img/backgrounds/bkg_boxes.png) no-repeat -631px bottom;
@@ -277,35 +283,35 @@ nav ul li a {
   bottom: -13px;
 }
 
-/* line 119, ../scss/style.scss */
+/* line 132, ../scss/style.scss */
 .box .content a {
   font-size: 11px;
   font-weight: bold;
   text-transform: uppercase;
 }
-/* line 121, ../scss/style.scss */
+/* line 134, ../scss/style.scss */
 .box .content h4 {
   margin: 0 0 5px 0;
   text-transform: uppercase;
   color: #bbbbbb;
 }
-/* line 123, ../scss/style.scss */
+/* line 136, ../scss/style.scss */
 .box .content ul {
   list-style: square;
   margin: 0 0 29px 0;
 }
-/* line 127, ../scss/style.scss */
+/* line 140, ../scss/style.scss */
 .box .content ul:last-child {
   margin: 0;
 }
-/* line 129, ../scss/style.scss */
+/* line 142, ../scss/style.scss */
 .box .content ul li {
   margin: 0 0 7px 0;
   color: #333333;
   font-size: 15px;
   line-height: 22px;
 }
-/* line 135, ../scss/style.scss */
+/* line 148, ../scss/style.scss */
 .box .content ul li a {
   font-size: 15px;
   color: #333333;
@@ -313,124 +319,124 @@ nav ul li a {
   font-weight: normal;
   border-bottom: 1px dotted #4C4C4C;
 }
-/* line 141, ../scss/style.scss */
+/* line 154, ../scss/style.scss */
 .box.blue .content a {
   color: #1872a0;
 }
 
 /* Golden box */
-/* line 146, ../scss/style.scss */
+/* line 159, ../scss/style.scss */
 .box.golden .header {
   background: url(../img/backgrounds/bkg_box_top_gold.png) repeat-y;
 }
-/* line 148, ../scss/style.scss */
+/* line 161, ../scss/style.scss */
 .box.golden .header hgroup {
   text-shadow: 1px 1px 1px #ffcc00;
 }
-/* line 150, ../scss/style.scss */
+/* line 163, ../scss/style.scss */
 .box.golden .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #845412;
 }
-/* line 151, ../scss/style.scss */
+/* line 164, ../scss/style.scss */
 .box.golden .header hgroup h4 {
   color: #9a6100;
 }
-/* line 154, ../scss/style.scss */
+/* line 167, ../scss/style.scss */
 .box.golden .content {
   background-position: -944px top;
 }
-/* line 155, ../scss/style.scss */
+/* line 168, ../scss/style.scss */
 .box.golden .footer {
   background-position: -631px bottom;
 }
 
 /* Green box */
-/* line 160, ../scss/style.scss */
+/* line 173, ../scss/style.scss */
 .box.green .header {
   background: url(../img/backgrounds/bkg_box_top_green.png) repeat-y;
 }
-/* line 164, ../scss/style.scss */
+/* line 177, ../scss/style.scss */
 .box.green .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #52642a;
 }
-/* line 165, ../scss/style.scss */
+/* line 178, ../scss/style.scss */
 .box.green .header hgroup h4 {
   text-shadow: 1px 1px 1px #b2e053;
   color: #5f7232;
 }
-/* line 168, ../scss/style.scss */
+/* line 181, ../scss/style.scss */
 .box.green .content {
   background-position: -308px top;
 }
-/* line 169, ../scss/style.scss */
+/* line 182, ../scss/style.scss */
 .box.green .footer {
   background-position: left bottom;
 }
 
 /* Blue box */
-/* line 175, ../scss/style.scss */
+/* line 188, ../scss/style.scss */
 .box.blue .header {
   background: url(../img/backgrounds/bkg_box_top_blue.png) repeat-y;
 }
-/* line 179, ../scss/style.scss */
+/* line 192, ../scss/style.scss */
 .box.blue .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #0f445e;
 }
-/* line 180, ../scss/style.scss */
+/* line 193, ../scss/style.scss */
 .box.blue .header hgroup h4 {
   text-shadow: 1px 1px 1px #1b93cf;
   color: #104c6b;
 }
-/* line 183, ../scss/style.scss */
+/* line 196, ../scss/style.scss */
 .box.blue .content {
   background-position: -1566px top;
 }
-/* line 184, ../scss/style.scss */
+/* line 197, ../scss/style.scss */
 .box.blue .footer {
   background-position: -1259px bottom;
 }
 
-/* line 188, ../scss/style.scss */
+/* line 201, ../scss/style.scss */
 .box.golden {
   position: absolute;
   top: 300px;
   left: 100px;
 }
 
-/* line 189, ../scss/style.scss */
+/* line 202, ../scss/style.scss */
 .box.green {
   position: absolute;
   top: 300px;
   left: 500px;
 }
 
-/* line 190, ../scss/style.scss */
+/* line 203, ../scss/style.scss */
 .box.blue {
   position: absolute;
   top: 300px;
   left: 900px;
 }
 
-/* line 192, ../scss/style.scss */
+/* line 205, ../scss/style.scss */
 nav ul li .filter {
   display: none;
   position: absolute;
   width: 236px;
   top: 35px;
-  left: -65px;
+  left: -37px;
   z-index: 100;
 }
-/* line 200, ../scss/style.scss */
+/* line 213, ../scss/style.scss */
 nav ul li .filter div.content {
   width: 186px;
   height: 294px;
   background: url(../img/backgrounds/bkg_filter.png) repeat-y -242px bottom;
   padding: 13px 25px 7px 25px;
 }
-/* line 207, ../scss/style.scss */
+/* line 220, ../scss/style.scss */
 nav ul li .filter div.t {
   position: absolute;
   top: -55px;
@@ -439,7 +445,7 @@ nav ul li .filter div.t {
   height: 55px;
   background: url(../img/backgrounds/bkg_filter.png) no-repeat left top;
 }
-/* line 208, ../scss/style.scss */
+/* line 221, ../scss/style.scss */
 nav ul li .filter div.b {
   position: absolute;
   bottom: -13px;
@@ -449,7 +455,7 @@ nav ul li .filter div.b {
   background: url(../img/backgrounds/bkg_filter.png) no-repeat -492px top;
 }
 
-/* line 216, ../scss/style.scss */
+/* line 229, ../scss/style.scss */
 nav ul li .filter .content h3 {
   margin: 0 0 19px 0;
   font-family: 'News Cycle', sans-serif;
@@ -457,54 +463,55 @@ nav ul li .filter .content h3 {
   color: #999999;
   text-transform: uppercase;
 }
-/* line 219, ../scss/style.scss */
+/* line 232, ../scss/style.scss */
 nav ul li .filter .content ul {
   position: none;
   top: 0;
   float: none;
 }
-/* line 220, ../scss/style.scss */
+/* line 233, ../scss/style.scss */
 nav ul li .filter .content ul li {
   display: block;
   margin: 0;
 }
-/* line 223, ../scss/style.scss */
+/* line 236, ../scss/style.scss */
 nav ul li .filter .content ul.ticks li {
   background: url(../img/icons/icons.png) no-repeat left -66px;
 }
-/* line 225, ../scss/style.scss */
+/* line 238, ../scss/style.scss */
 nav ul li .filter .content ul.ticks li.selected {
   background: url(../img/icons/icons.png) no-repeat left -44px;
 }
-/* line 232, ../scss/style.scss */
+/* line 245, ../scss/style.scss */
 nav ul li .filter .content ul.radio li {
   margin: 0 0 5px 0;
   background: url(../img/icons/icons.png) no-repeat left -21px;
 }
-/* line 235, ../scss/style.scss */
+/* line 248, ../scss/style.scss */
 nav ul li .filter .content ul.radio li.selected {
   background: url(../img/icons/icons.png) no-repeat left 3px;
 }
-/* line 241, ../scss/style.scss */
+/* line 254, ../scss/style.scss */
 nav ul li .filter .content ul {
   margin: 0 0 20px 0;
 }
-/* line 244, ../scss/style.scss */
+/* line 257, ../scss/style.scss */
 nav ul li .filter .content ul li {
+  width: 177px;
   margin: 0 0 14px 0;
   padding-left: 20px;
   background: url(../img/icons/icons.png) no-repeat left -66px;
   cursor: pointer;
 }
-/* line 250, ../scss/style.scss */
+/* line 264, ../scss/style.scss */
 nav ul li .filter .content ul li.selected {
   background: url(../img/icons/icons.png) no-repeat left -44px;
 }
-/* line 252, ../scss/style.scss */
+/* line 266, ../scss/style.scss */
 nav ul li .filter .content ul li.selected a {
   color: #666666;
 }
-/* line 255, ../scss/style.scss */
+/* line 269, ../scss/style.scss */
 nav ul li .filter .content ul li a {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 11px;
@@ -512,7 +519,7 @@ nav ul li .filter .content ul li a {
   text-transform: uppercase;
   line-height: 14px;
 }
-/* line 265, ../scss/style.scss */
+/* line 279, ../scss/style.scss */
 nav ul li .filter .content hr {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
